--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,7 +1,17 @@
 <mat-toolbar color="primary">
 <span>
-    <a mat-button>
-     <mat-icon>home</mat-icon> Proyecto
+    <a routerLink="" mat-button>
+     <mat-icon>home</mat-icon> drummond ltd
     </a>
 </span>
+<div>
+    <a mat-button routerLink="formulario">Formularios</a>
+</div>
+<div>
+    <a mat-button routerLink="formulario/consultas">Consultas</a>
+</div>
+<div>
+    <a mat-button routerLink="formulario/consultas/generales">Consultas Generales</a>
+</div>
 </mat-toolbar>
+
