--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary">
 <span>
     <a routerLink="" mat-button>
-     <mat-icon>home</mat-icon> drummond ltd
+     <mat-icon>home</mat-icon> Drummond ltd
     </a>
 </span>
 <div>
