--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,14 +1,14 @@
 <mat-toolbar color="primary">
 <span>
     <a routerLink="" mat-button>
-     <mat-icon>home</mat-icon> Drummond ltd
+     <mat-icon>home</mat-icon> Proyecto
     </a>
 </span>
 <div>
     <a mat-button routerLink="formulario">Formularios</a>
 </div>
 <div>
-    <a mat-button routerLink="formulario/consultas">Consultas</a>
+    <a mat-button routerLink="formulario/consultas"><mat-icon>search</mat-icon> Consultas</a>
 </div>
 <div>
     <a mat-button routerLink="formulario/consultas/generales">Consultas Generales</a>
