--- a/src/app/formularios/registrar-formulario/registrar-formulario.component.html
+++ b/src/app/formularios/registrar-formulario/registrar-formulario.component.html
@@ -1,4 +1,4 @@
 <h2>FORMULARIO</h2>
 
-<app-formulario-persona (submit)="enviarFormulario($event)"></app-formulario-persona>
+<app-formulario-persona (onSubmit)="enviarFormulario($event)"></app-formulario-persona>
 
